fix: preview overflow from top

--- a/src/client/styles/_previewer.scss
+++ b/src/client/styles/_previewer.scss
@@ -8,6 +8,7 @@
   -webkit-font-smoothing: subpixel-antialiased;
 
   padding-bottom: 0px;
+  top: 0px;
   bottom: 39px;
 
   &_direction-ltr {
